# supply-chain-warroom

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  vercel.json
backend/: CLAUDE.md  Dockerfile  entrypoint.sh  pyproject.toml  railway.toml
backend/app/: config.py  database.py  main.py
backend/app/agents/: bridge.py  execution_agent.py  orchestrator.py  risk_monitor.py  simulation_agent.py  strategy_agent.py
backend/app/ingestion/: gdelt.py  scheduler.py  weather.py
backend/app/models/: __init__.py  agent_decision.py  agent_handoff.py  agent_memory.py  alert_rule.py  demand.py  order.py  product.py  risk_event.py  route.py  simulation.py  supplier.py
backend/app/routers/: agents.py  alert_rules.py  dashboard.py  demand.py  demo.py  orders.py  risks.py  routes.py  simulations.py  stream.py  suppliers.py
backend/app/schemas/: __init__.py  agent.py  alert_rule.py  dashboard.py  demand.py  handoff.py  memory.py  order.py  product.py  risk.py  route.py  simulation.py  supplier.py
backend/app/seed/: agent_decisions.py  agent_memories.py  alert_rules.py  constants.py  demand.py  generator.py  orders.py  risk_events.py  routes.py  suppliers.py
backend/app/services/: agent_service.py  alert_rule_service.py  dashboard_service.py  (+11 more)
backend/tests/: conftest.py  mock_anthropic.py  test_agent_memory.py  test_alert_rules.py  test_api_endpoints.py  test_decision_approval.py  test_e2e_flows.py  test_risk_analysis.py  test_seed_data.py  test_simulated_environment.py  test_simulation_engine.py  test_sse_broadcast.py
(+89 files in other folders)
